Keep the labels coupled for now.

--- a/Preprocess-vetting.ipynb
+++ b/Preprocess-vetting.ipynb
@@ -9,9 +9,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total entries: 1700\n",
+      "Total labeled entries: 1698\n",
+      "Split sizes. Train: 1467; Valid: 231\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "\n",
@@ -41,7 +51,7 @@
     "labels_table = labels_table.drop(columns=['261262721'])\n",
     "labels_table['tic_id'] = labels_table['TIC ID']\n",
     "\n",
-    "disps = ['e', 'p', 'n', 'b', 't', 'u']\n",
+    "disps = ['pb', 'pt', 'pu', 'eb', 'et', 'eu', 'nb', 'nt', 'nu']\n",
     "users = ['ch', 'et', 'md', 'as', 'mk']\n",
     "\n",
     "for d in disps:\n",
@@ -50,13 +60,11 @@
     "def set_labels(row):\n",
     "    a = ~row.isna()\n",
     "    if a['Final']:\n",
-    "        row[f'disp_{row[\"Final\"][0]}'] = 1\n",
-    "        row[f'disp_{row[\"Final\"][1]}'] = 1\n",
+    "        row[f'disp_{row[\"Final\"]}'] = 1\n",
     "    else:\n",
     "        for user in users:\n",
     "            if a[user] and row[user]:\n",
-    "                row[f'disp_{row[user][0]}'] += 1\n",
-    "                row[f'disp_{row[user][1]}'] += 1\n",
+    "                row[f'disp_{row[user]}'] += 1\n",
     "                        \n",
     "    return row\n",
     "\n",
@@ -96,25 +104,6 @@
    "source": [
     "labels_table = pd.read_csv(labels_file, header=0, low_memory=False)\n",
     "labels_table.sample(3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pd.set_option('display.max_columns', None)\n",
-    "t_train.sample(5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "t_val.sample(5)"
    ]
   },
   {
