Keep the labels decoupled.

--- a/Preprocess-vetting.ipynb
+++ b/Preprocess-vetting.ipynb
@@ -9,19 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total entries: 1700\n",
-      "Total labeled entries: 1698\n",
-      "Split sizes. Train: 1467; Valid: 231\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "\n",
@@ -51,7 +41,7 @@
     "labels_table = labels_table.drop(columns=['261262721'])\n",
     "labels_table['tic_id'] = labels_table['TIC ID']\n",
     "\n",
-    "disps = ['pb', 'pt', 'pu', 'eb', 'et', 'eu', 'nb', 'nt', 'nu']\n",
+    "disps = ['e', 'p', 'n', 'b', 't', 'u']\n",
     "users = ['ch', 'et', 'md', 'as', 'mk']\n",
     "\n",
     "for d in disps:\n",
@@ -60,11 +50,13 @@
     "def set_labels(row):\n",
     "    a = ~row.isna()\n",
     "    if a['Final']:\n",
-    "        row[f'disp_{row[\"Final\"]}'] = 1\n",
+    "        row[f'disp_{row[\"Final\"][0]}'] = 1\n",
+    "        row[f'disp_{row[\"Final\"][1]}'] = 1\n",
     "    else:\n",
     "        for user in users:\n",
     "            if a[user] and row[user]:\n",
-    "                row[f'disp_{row[user]}'] += 1\n",
+    "                row[f'disp_{row[user][0]}'] += 1\n",
+    "                row[f'disp_{row[user][1]}'] += 1\n",
     "                        \n",
     "    return row\n",
     "\n",
@@ -91,9 +83,9 @@
     "t_val = t_val.drop(columns=['Split'])\n",
     "all_table = all_table.drop(columns=['Split'])\n",
     "\n",
-    "# t_train.to_csv('/mnt/tess/astronet/tces-vetting-v1-train.csv')\n",
-    "# t_val.to_csv('/mnt/tess/astronet/tces-vetting-v1-val.csv')\n",
-    "# all_table.to_csv('/mnt/tess/astronet/tces-vetting-all.csv')"
+    "t_train.to_csv('/mnt/tess/astronet/tces-vetting-v1-train.csv')\n",
+    "t_val.to_csv('/mnt/tess/astronet/tces-vetting-v1-val.csv')\n",
+    "all_table.to_csv('/mnt/tess/astronet/tces-vetting-all.csv')"
    ]
   },
   {
