--- a/Preprocess-vetting.ipynb
+++ b/Preprocess-vetting.ipynb
@@ -83,9 +83,9 @@
     "t_val = t_val.drop(columns=['Split'])\n",
     "all_table = all_table.drop(columns=['Split'])\n",
     "\n",
-    "t_train.to_csv('/mnt/tess/astronet/tces-vetting-v1-train.csv')\n",
-    "t_val.to_csv('/mnt/tess/astronet/tces-vetting-v1-val.csv')\n",
-    "all_table.to_csv('/mnt/tess/astronet/tces-vetting-all.csv')"
+    "# t_train.to_csv('/mnt/tess/astronet/tces-vetting-v1-train.csv')\n",
+    "# t_val.to_csv('/mnt/tess/astronet/tces-vetting-v1-val.csv')\n",
+    "# all_table.to_csv('/mnt/tess/astronet/tces-vetting-all.csv')"
    ]
   },
   {
