--- a/Data.ipynb
+++ b/Data.ipynb
@@ -9,8 +9,8 @@
     "import os\n",
     "import tensorflow as tf\n",
     "\n",
-    "tces_file = '/mnt/tess/astronet/tces-toi.csv'\n",
-    "file_pattern = '/mnt/tess/astronet/tfrecords-toi/*'\n",
+    "tces_file = '/mnt/tess/astronet/tces-vetting-v1-train.csv'\n",
+    "file_pattern = '/mnt/tess/astronet/tfrecords-vetting-1-train/*'\n",
     "filenames = tf.io.gfile.glob(file_pattern)\n",
     "    \n",
     "filenames"
@@ -32,7 +32,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "series = {}\n",
