--- a/Train-vetting.ipynb
+++ b/Train-vetting.ipynb
@@ -11,28 +11,22 @@
     "from astronet import models\n",
     "from astronet import train\n",
     "\n",
-    "model_name = 'AstroCNNModel'\n",
-    "config_name = 'extended'\n",
     "\n",
     "def run_training(ensemble_no=1):\n",
     "    train.FLAGS = train.parser.parse_args([\n",
-    "      '--model', model_name,\n",
-    "      '--config_name', config_name,\n",
-    "      '--train_files', '/mnt/tess/astronet/tfrecords-26-train/*',\n",
-    "      '--eval_files', '/mnt/tess/astronet/tfrecords-26-val/*',\n",
+    "      '--model', 'AstroCNNModelVetting',\n",
+    "      '--config_name', 'base',\n",
+    "      '--train_files', '/mnt/tess/astronet/tfrecords-vetting-1-train/*',\n",
+    "      '--eval_files', '/mnt/tess/astronet/tfrecords-vetting-1-val/*',\n",
+    "      '--pretrain_model_dir', '/mnt/tess/astronet/checkpoints/extended_26_run_18/1',\n",
     "      '--model_dir', '',\n",
-    "      '--train_epochs', '1',\n",
-    "      '--train_steps', '50'\n",
+    "      '--train_epochs', '2',\n",
+    "      '--train_steps', '10'\n",
     "    ])\n",
-    "\n",
-    "    config = models.get_model_config(model_name, config_name)\n",
-    "\n",
-    "    model_class = models.get_model_class(model_name)\n",
-    "    model = model_class(config)\n",
     "    \n",
-    "    train.train(model, config)\n",
+    "    train.main(None)\n",
     "\n",
-    "m = run_training()"
+    "run_training()"
    ]
   }
  ],
