Include toi data.

--- a/Preprocess-vetting.ipynb
+++ b/Preprocess-vetting.ipynb
@@ -19,6 +19,8 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
+    "pd.set_option('display.max_columns', 50)\n",
+    "\n",
     "\n",
     "tces_file = '/mnt/tess/labels/tce_bls_instar+old.csv'\n",
     "labels_file = '/mnt/tess/labels/labels_vetting_v1.csv'\n",
@@ -66,6 +68,16 @@
     "joined_table = joined_table.set_index('tic_id')\n",
     "labels_table = labels_table.set_index('tic_id')\n",
     "joined_table = joined_table.join(labels_table, on='tic_id', how='inner')\n",
+    "\n",
+    "\n",
+    "toi = pd.read_csv('/mnt/tess/labels/tce_toi_vetting_processed.csv', header=0, low_memory=False).set_index('tic_id')\n",
+    "\n",
+    "toi['Split'] = toi.apply(lambda r: 'train' if r['rand'] < 80 else 'test', axis=1)\n",
+    "toi = toi.drop(columns=['Unnamed: 0', 'rand'])\n",
+    "\n",
+    "joined_table = joined_table.append(toi)\n",
+    "\n",
+    "\n",
     "print(f'Total entries: {len(joined_table)}')\n",
     "joined_table = joined_table[\n",
     "    sum(joined_table[f'disp_{d}'] for d in disps) > 0\n",
@@ -77,15 +89,18 @@
     "\n",
     "t_train = joined_table[joined_table['Split'] == 'train']\n",
     "t_val = joined_table[joined_table['Split'] == 'val']\n",
-    "print(f'Split sizes. Train: {len(t_train)}; Valid: {len(t_val)}')\n",
+    "t_test = joined_table[joined_table['Split'] == 'test']\n",
+    "print(f'Split sizes. Train: {len(t_train)}; Valid: {len(t_val)}; Test: {len(t_test)}')\n",
     "\n",
     "t_train = t_train.drop(columns=['Split'])\n",
     "t_val = t_val.drop(columns=['Split'])\n",
+    "t_test = t_test.drop(columns=['Split'])\n",
     "all_table = all_table.drop(columns=['Split'])\n",
     "\n",
-    "# t_train.to_csv('/mnt/tess/astronet/tces-vetting-v1-train.csv')\n",
-    "# t_val.to_csv('/mnt/tess/astronet/tces-vetting-v1-val.csv')\n",
-    "# all_table.to_csv('/mnt/tess/astronet/tces-vetting-all.csv')"
+    "t_train.to_csv('/mnt/tess/astronet/tces-vetting-v2-train.csv')\n",
+    "t_val.to_csv('/mnt/tess/astronet/tces-vetting-v2-val.csv')\n",
+    "t_test.to_csv('/mnt/tess/astronet/tces-vetting-v2-test.csv')\n",
+    "all_table.to_csv('/mnt/tess/astronet/tces-vetting-all.csv')"
    ]
   },
   {
@@ -94,8 +109,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "labels_table = pd.read_csv(labels_file, header=0, low_memory=False)\n",
-    "labels_table.sample(3)"
+    "all_table.sample(3)"
    ]
   },
   {
@@ -111,61 +125,62 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def load_tces_old():\n",
-    "    tceold = pd.read_csv('/mnt/tess/astronet/tces.csv', header=0).set_index('tic_id')\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
     "\n",
-    "    # Only keep the max sectors read.\n",
-    "    maxsect = tceold.groupby('tic_id')['Sectors'].max()\n",
-    "    tceold = tceold.join(maxsect, on='tic_id', how='right', rsuffix='_max')\n",
-    "    tceold = tceold[tceold.Sectors == tceold.Sectors_max]\n",
-    "\n",
-    "    # Then keep the max row ID.\n",
-    "    maxrowid = tceold.groupby('tic_id')['row_id'].max()\n",
-    "    tceold = tceold.join(maxrowid, on='tic_id', how='right', rsuffix='_max')\n",
-    "    tceold = tceold[tceold.row_id == tceold.row_id_max]\n",
-    "\n",
-    "    return tceold\n",
-    "\n",
-    "def generate_tce_bls_instar():\n",
-    "    tcenew = pd.read_csv('/mnt/tess/labels/tce_bls_instar.csv', header=0).set_index('tic_id')\n",
-    "    tceold = load_tces_old()\n",
-    "    tcenorth = pd.read_csv('/mnt/tess/labels/tce_north_instar.csv', header=0).set_index('tic_id')\n",
-    "\n",
-    "    # Copy from old data where it's missing from the new.\n",
-    "    alltce = tcenew.join(tceold, how='outer', on='tic_id', rsuffix='_old')\n",
-    "    alltce = alltce.set_index('tic_id')\n",
-    "\n",
-    "    alltce = alltce.drop(columns=['row_id'])\n",
-    "\n",
-    "    def fillna(df, col_name):\n",
-    "        df.loc[df[col_name].isna(), col_name] = df.loc[df[col_name].isna(), col_name + '_old']\n",
-    "\n",
-    "    fillna(alltce, 'toi_id')\n",
-    "    fillna(alltce, 'Disposition')\n",
-    "    fillna(alltce, 'RA')\n",
-    "    fillna(alltce, 'Dec')\n",
-    "    fillna(alltce, 'Tmag')\n",
-    "    fillna(alltce, 'Epoc')\n",
-    "    fillna(alltce, 'Period')\n",
-    "    fillna(alltce, 'Duration')\n",
-    "    fillna(alltce, 'Transit_Depth')\n",
-    "    fillna(alltce, 'Sectors')\n",
-    "    fillna(alltce, 'camera')\n",
-    "    fillna(alltce, 'ccd')\n",
-    "    fillna(alltce, 'star_rad')\n",
-    "    fillna(alltce, 'star_mass')\n",
-    "    fillna(alltce, 'teff')\n",
-    "    fillna(alltce, 'logg')\n",
-    "    fillna(alltce, 'SN')\n",
-    "    fillna(alltce, 'Qingress')\n",
-    "\n",
-    "    alltce = alltce.drop(columns=[c for c in alltce.columns if c.endswith('_old')])\n",
+    "def clean_tois():\n",
+    "    toi = pd.read_csv('/mnt/tess/labels/toi_pc_instar.csv', header=0)\n",
     "    \n",
-    "    alltce = alltce.append(tcenorth)\n",
-    "    \n",
-    "    alltce['Ilabel'] = alltce['Ilabel'].fillna(False)\n",
+    "    toi = toi[toi['instar'] == False]\n",
+    "    toi = toi[toi['Master Disposition'].isin(['P', 'VPC', 'KP'])]\n",
     "\n",
-    "    alltce.to_csv('/mnt/tess/labels/tce_bls_instar+old.csv')"
+    "    toi['tic_id'] = toi['star_tic']\n",
+    "    toi['RA'] = toi['star_ra']\n",
+    "    toi['Dec'] = toi['star_dec']\n",
+    "    toi['Tmag'] = toi['star_tmag']\n",
+    "    toi['Epoc'] = toi['planet_e_epoch']\n",
+    "    toi['Period'] = toi['planet_e_period']\n",
+    "    toi['Duration'] = toi['planet_e_tdur']\n",
+    "    toi['Transit_Depth'] = toi['planet_depth']\n",
+    "    toi['Sectors'] = -1.0\n",
+    "    toi['teff'] = toi['star_teff']\n",
+    "    toi['logg'] = toi['star_logg']\n",
+    "    toi['SN'] = toi['star_rad']\n",
+    "    toi['Qingress'] = toi['star_rad']\n",
+    "    toi['disp_p'] = 1\n",
+    "    toi['disp_e'] = 0\n",
+    "    toi['disp_n'] = 0\n",
+    "    toi['disp_b'] = 0\n",
+    "    toi['disp_t'] = 0\n",
+    "    toi['disp_u'] = 0\n",
+    "    \n",
+    "    toi = toi[[\n",
+    "        'tic_id',\n",
+    "        'RA',\n",
+    "         'Dec',\n",
+    "         'Tmag',\n",
+    "         'Epoc',\n",
+    "         'Period',\n",
+    "         'Duration',\n",
+    "         'Transit_Depth',\n",
+    "         'Sectors',\n",
+    "         'star_rad',\n",
+    "         'star_mass',\n",
+    "         'teff',\n",
+    "         'logg',\n",
+    "         'SN',\n",
+    "         'Qingress',\n",
+    "         'disp_e',\n",
+    "         'disp_p',\n",
+    "         'disp_n',\n",
+    "         'disp_b',\n",
+    "         'disp_t',\n",
+    "         'disp_u',\n",
+    "    ]]\n",
+    "    \n",
+    "    toi['rand'] = toi.apply(lambda r: np.random.randint(0, 100), axis=1)\n",
+    "    \n",
+    "    toi.to_csv('/mnt/tess/labels/tce_toi_vetting_processed.csv')"
    ]
   }
  ],
