Fix a couple of bugs.

--- a/Data.ipynb
+++ b/Data.ipynb
@@ -9,8 +9,8 @@
     "import os\n",
     "import tensorflow as tf\n",
     "\n",
-    "tces_file = '/mnt/tess/astronet/tces-vetting-v1-train.csv'\n",
-    "file_pattern = '/mnt/tess/astronet/tfrecords-vetting-1-train/*'\n",
+    "tces_file = '/mnt/tess/astronet/tces-vetting-v2-test.csv'\n",
+    "file_pattern = '/mnt/tess/astronet/tfrecords-vetting-2-test/*'\n",
     "filenames = tf.io.gfile.glob(file_pattern)\n",
     "    \n",
     "filenames"
@@ -84,7 +84,7 @@
    "source": [
     "from matplotlib import pyplot as plt\n",
     "\n",
-    "labels = ['E', 'J', 'N', 'S', 'B']\n",
+    "labels = ['p', 'e', 'n']\n",
     "counts = [sum(examples_table['disp_{}'.format(l)] > 0) for l in labels]\n",
     "ax = plt.bar(labels, counts)\n",
     "for i in range(len(labels)):\n",
@@ -122,8 +122,8 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "np.array(set(tce_table[tce_table['disp_E'] > 0]['tic_id'].values)\n",
-    "    - set(examples_table[examples_table['disp_E'] > 0]['tic_id'].values))"
+    "np.array(set(tce_table[tce_table[f'disp_{labels[0]}'] > 0]['tic_id'].values)\n",
+    "    - set(examples_table[examples_table[f'disp_{labels[0]}'] > 0]['tic_id'].values))"
    ]
   },
   {
@@ -151,10 +151,8 @@
     "        ex = tf.train.Example.FromString(record.numpy())\n",
     "        if (ex.features.feature[\"tic_id\"].int64_list.value[0] == tic_id):\n",
     "          print('TIC ID:', tic_id)\n",
-    "          print('E:', ex.features.feature[\"disp_E\"].int64_list.value[0])\n",
-    "          print('N:', ex.features.feature[\"disp_N\"].int64_list.value[0])\n",
-    "          print('J:', ex.features.feature[\"disp_J\"].int64_list.value[0])\n",
-    "          print('S:', ex.features.feature[\"disp_S\"].int64_list.value[0])\n",
+    "          for l in labels:\n",
+    "              print(f'{l}:', ex.features.feature[\"disp_{l}\"].int64_list.value[0])\n",
     "          print('Duration:', ex.features.feature[\"Duration\"].float_list.value[0])\n",
     "          return ex\n",
     "\n",
@@ -174,7 +172,7 @@
     "from astronet import models\n",
     "from astronet.astro_cnn_model import input_ds\n",
     "\n",
-    "config = models.get_model_config('AstroCNNModel', 'extended')\n",
+    "config = models.get_model_config('AstroCNNModelVetting', 'base')\n",
     "\n",
     "ds = input_ds.build_dataset(\n",
     "      file_pattern=file_pattern,\n",
@@ -263,7 +261,7 @@
    },
    "outputs": [],
    "source": [
-    "tce = find_tce(188825647)\n",
+    "tce = find_tce(158170594)\n",
     "\n",
     "list(tce.features.feature.keys())"
    ]
