Preprocessing for y3 data

--- a/Preprocess.ipynb
+++ b/Preprocess.ipynb
@@ -20,10 +20,10 @@
     "import pandas as pd\n",
     "\n",
     "\n",
-    "tces_file = '/mnt/tess/labels/tce_bls_instar+old.csv'\n",
+    "tces_file = '/mnt/tess/labels/tce_bls_to_y3.csv'\n",
     "ext_data_file = '/mnt/tess/labels/ext_mast_data.csv'\n",
-    "labels_file = '/mnt/tess/labels/labels_v7.csv'\n",
-    "splits_file = '/mnt/tess/labels/splits_v3.csv'\n",
+    "labels_file = '/mnt/tess/labels/labels_v8.csv'\n",
+    "splits_file = '/mnt/tess/labels/splits_v4.csv'\n",
     "\n",
     "\n",
     "tce_table = pd.read_csv(tces_file, header=0, low_memory=False).set_index('tic_id')\n",
@@ -102,23 +102,10 @@
     "print(f'Split sizes. Train: {len(t_train)}; Valid: {len(t_val)}; Test: {len(t_test)}')\n",
     "\n",
     "\n",
-    "# t_train.to_csv('/mnt/tess/astronet/tces-v7-train.csv')\n",
-    "# t_val.to_csv('/mnt/tess/astronet/tces-v7-val.csv')\n",
-    "# t_test.to_csv('/mnt/tess/astronet/tces-v7-test.csv')\n",
-    "# all_table.to_csv('/mnt/tess/astronet/tces-tmp-all.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "labels_table = pd.read_csv(labels_file, header=0, low_memory=False)\n",
-    "# labels_table['tic_id'] = labels_table['TIC ID']\n",
-    "\n",
-    "# labels_table[['tic_id', 'Final']]\n",
-    "labels_table.sample(50)"
+    "t_train.to_csv('/mnt/tess/astronet/tces-v8-train.csv')\n",
+    "t_val.to_csv('/mnt/tess/astronet/tces-v8-val.csv')\n",
+    "t_test.to_csv('/mnt/tess/astronet/tces-v8-test.csv')\n",
+    "all_table.to_csv('/mnt/tess/astronet/tces-tmp-all.csv')"
    ]
   },
   {
@@ -216,7 +203,35 @@
     "    \n",
     "    alltce['Ilabel'] = alltce['Ilabel'].fillna(False)\n",
     "\n",
-    "    alltce.to_csv('/mnt/tess/labels/tce_bls_instar+old.csv')"
+    "    alltce.to_csv('/mnt/tess/labels/tce_bls_instar+old.csv')\n",
+    "    \n",
+    "\n",
+    "def add_y3_data():\n",
+    "    tcenew = pd.read_csv('/mnt/tess/labels/Y3_cand_instar.csv', header=0, low_memory=False)\n",
+    "    tceold = pd.read_csv('/mnt/tess/labels/tce_bls_instar+old.csv', header=0, low_memory=False)\n",
+    "    \n",
+    "    tceold = tceold.drop(columns=['Unnamed: 0', 'a', 'ccd', 'camera', 'row_id_max', 'Disposition', 'toi_id'])\n",
+    "    \n",
+    "    tcenew['tic_id'] = tcenew['star_tic']\n",
+    "    tcenew['RA'] = tcenew['star_ra']\n",
+    "    tcenew['Dec'] = tcenew['star_dec']\n",
+    "    tcenew['Tmag'] = tcenew['star_tmag']\n",
+    "    tcenew['Epoc'] = tcenew['planet_epoch']\n",
+    "    tcenew['Period'] = tcenew['planet_period']\n",
+    "    tcenew['Duration'] = tcenew['planet_tdur']\n",
+    "    tcenew['Transit_Depth'] = tcenew['planet_depth']\n",
+    "    tcenew['Sectors'] = tcenew.apply(lambda row: len(row['sector_id'].split(' ')), axis=1)\n",
+    "    tcenew['Sectors_max'] = tcenew.apply(lambda row: max(row['sector_id'].split(' ')), axis=1)\n",
+    "    tcenew['teff'] = tcenew['star_teff']\n",
+    "    tcenew['logg'] = tcenew['star_logg']\n",
+    "    tcenew['SN'] = tcenew['star_rad']\n",
+    "    tcenew['Qingress'] = tcenew['star_rad']\n",
+    "    tcenew['Ilabel'] = tcenew['instar']\n",
+    "    \n",
+    "    alltce = tceold\n",
+    "    alltce = alltce.append(tcenew[tceold.columns])\n",
+    "    \n",
+    "    alltce.to_csv('/mnt/tess/labels/tce_bls_to_y3.csv')"
    ]
   }
  ],
