--- a/Tune-vetting.ipynb
+++ b/Tune-vetting.ipynb
@@ -34,18 +34,25 @@
    "outputs": [],
    "source": [
     "import argparse\n",
-    "from astronet import tune\n",
+    "from astronet import tune_vetting\n",
+    "from astronet import train\n",
     "\n",
-    "config_name = 'local_global_new'\n",
+    "config_name = 'base'\n",
     "\n",
-    "tune.FLAGS = tune.parser.parse_args([\n",
+    "tune_vetting.FLAGS = tune_vetting.parser.parse_args([\n",
     "  '--client_secrets', '../client_secrets.json',\n",
-    "  '--model', 'AstroCnnModel',\n",
+    "  '--model', 'AstroCnnModelVetting',\n",
+    "  '--config_name', config_name,\n",
+    "  '--train_files', '',\n",
+    "])\n",
+    "train.FLAGS = train.parser.parse_args([\n",
+    "  '--model', 'AstroCnnModelVetting',\n",
     "  '--config_name', config_name,\n",
     "  '--train_files', '',\n",
     "])\n",
     "\n",
-    "client = tune.initialize_client()"
+    "\n",
+    "client = tune_vetting.initialize_client()"
    ]
   },
   {
@@ -59,7 +66,7 @@
     "pd.set_option('max_colwidth', 100)\n",
     "\n",
     "resp = client.projects().locations().studies().list(\n",
-    "    parent=tune.study_parent()).execute()\n",
+    "    parent=tune_vetting.study_parent()).execute()\n",
     "studies = pd.DataFrame(resp['studies'])\n",
     "studies = studies.sort_values('createTime', ascending=False)\n",
     "studies.head(5)"
@@ -71,29 +78,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "study = studies['name'][14]\n",
-    "study_id = '{}/studies/{}'.format(tune.study_parent(), study.split('/')[-1])\n",
+    "study = studies['name'][0]\n",
+    "study_id = '{}/studies/{}'.format(tune_vetting.study_parent(), study.split('/')[-1])\n",
     "print(study_id)\n",
     "resp = client.projects().locations().studies().trials().list(\n",
     "    parent=study_id).execute()\n",
     "\n",
-    "metrics_r = []\n",
-    "metrics_p = []\n",
+    "metrics_loss = []\n",
     "params = []\n",
     "trial_ids = []\n",
     "for trial in resp['trials']:\n",
     "  if 'finalMeasurement' not in trial:\n",
     "    continue\n",
     "\n",
-    "  r, = (m['value'] for m in trial['finalMeasurement']['metrics'] if m['metric'] == 'r')  \n",
-    "  p, = (m['value'] for m in trial['finalMeasurement']['metrics'] if m['metric'] == 'p')\n",
+    "  loss, = (m['value'] for m in trial['finalMeasurement']['metrics'] if m['metric'] == 'loss')  \n",
     "  \n",
-    "  if r < 0.05:\n",
-    "    continue\n",
-    "    \n",
     "  params.append(trial['parameters'])\n",
-    "  metrics_r.append(r)\n",
-    "  metrics_p.append(p)\n",
+    "  metrics_loss.append(loss)\n",
     "  trial_ids.append(int(trial['name'].split('/')[-1]))\n",
     "  \n",
     "print(max(trial_ids), 'valid studies')"
@@ -105,48 +106,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "import matplotlib\n",
     "from matplotlib import pyplot as plt\n",
     "\n",
     "matplotlib.rcParams.update({'font.size': 16})\n",
     "\n",
     "fig, ax = plt.subplots()\n",
-    "ax.scatter(metrics_r, metrics_p)\n",
-    "plt.xlabel(\"recall\")\n",
-    "plt.ylabel(\"precision\")\n",
-    "sorted_metrics = sorted(zip(metrics_r, metrics_p))\n",
+    "ax.plot(np.minimum(metrics_loss, 0.5))\n",
+    "plt.xlabel(\"validation loss\")\n",
+    "sorted_metrics = sorted(metrics_loss, reverse=True)\n",
     "\n",
+    "best = 0\n",
     "for i, trial_id in enumerate(trial_ids):\n",
-    "  if ((metrics_r[i], metrics_p[i]) >= sorted_metrics[-5]):\n",
-    "    ax.annotate(' {}'.format(i), (metrics_r[i], metrics_p[i]))\n",
-    "\n",
-    "plt.gcf().set_size_inches((16, 16))"
+    "  if (metrics_loss[i] <= sorted_metrics[-5]):\n",
+    "    print(i, metrics_loss[i])\n",
+    "  if (metrics_loss[i] <= metrics_loss[best]):\n",
+    "    best = i\n",
+    "    \n",
+    "print('Best trial:', trial_ids[best])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "best = 786\n",
-    "print(trial_ids[best])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "import pprint\n",
     "from astronet import models\n",
     "\n",
-    "config = models.get_model_config('AstroCNNModel', config_name)\n",
+    "config = models.get_model_config('AstroCNNModelVetting', config_name)\n",
     "\n",
     "for param in params[best]:\n",
-    "  tune.map_param(config['hparams'], param)\n",
-    "  \n",
+    "  tune_vetting.map_param(config['hparams'], config['vetting_hparams'], param, config['inputs'])\n",
+    "\n",
+    "print(train.FLAGS.train_steps)\n",
+    "pprint.pprint(config['vetting_hparams'])\n",
     "pprint.pprint(config['hparams'])"
    ]
   },
@@ -160,11 +158,11 @@
     "import pprint\n",
     "from astronet import models\n",
     "\n",
-    "config1 = models.get_model_config('AstroCNNModel', config_name)\n",
+    "config1 = models.get_model_config('AstroCNNModelVetting', config_name)\n",
     "\n",
-    "config2 = models.get_model_config('AstroCNNModel', config_name)\n",
+    "config2 = models.get_model_config('AstroCNNModelVetting', config_name)\n",
     "for param in params[best]:\n",
-    "  tune.map_param(config2['hparams'], param)\n",
+    "  tune_vetting.map_param(config2['hparams'], config2['vetting_hparams'], param, config2.inputs)\n",
     "  \n",
     "pp = pprint.PrettyPrinter()\n",
     "print('\\n'.join(difflib.unified_diff(\n",
