Add a revised model configuration and tuning spec.

--- a/Data.ipynb
+++ b/Data.ipynb
@@ -10,7 +10,7 @@
     "import tensorflow as tf\n",
     "\n",
     "tces_file = '/mnt/tess/astronet/tces-vetting-v2-train.csv'\n",
-    "file_pattern = '/mnt/tess/astronet/tfrecords-vetting-2-train/*'\n",
+    "file_pattern = '/mnt/tess/astronet/tfrecords-26-train/*'\n",
     "filenames = tf.io.gfile.glob(file_pattern)\n",
     "    \n",
     "filenames"
@@ -172,7 +172,7 @@
     "from astronet import models\n",
     "from astronet.astro_cnn_model import input_ds\n",
     "\n",
-    "config = models.get_model_config('AstroCNNModelVetting', 'base')\n",
+    "config = models.get_model_config('AstroCNNModel', 'extended')\n",
     "\n",
     "ds = input_ds.build_dataset(\n",
     "      file_pattern=file_pattern,\n",
