--- a/Train.ipynb
+++ b/Train.ipynb
@@ -12,14 +12,14 @@
     "from astronet import train\n",
     "\n",
     "model_name = 'AstroCNNModel'\n",
-    "config_name = 'extended'\n",
+    "config_name = 'revised'\n",
     "\n",
     "def run_training(ensemble_no=1):\n",
     "    train.FLAGS = train.parser.parse_args([\n",
     "      '--model', model_name,\n",
     "      '--config_name', config_name,\n",
-    "      '--train_files', '/mnt/tess/astronet/tfrecords-26-train/*',\n",
-    "      '--eval_files', '/mnt/tess/astronet/tfrecords-26-val/*',\n",
+    "      '--train_files', '/mnt/tess/astronet/tfrecords-27-train/00000-of-00050',\n",
+    "      '--eval_files', '/mnt/tess/astronet/tfrecords-27-train/00000-of-00050',\n",
     "      '--model_dir', '',\n",
     "      '--train_epochs', '5',\n",
     "      '--train_steps', '100'\n",
