--- a/old_notenbooks/Tune.ipynb
+++ b/old_notenbooks/Tune.ipynb
@@ -35,9 +35,8 @@
    "source": [
     "import argparse\n",
     "from astronet import tune\n",
-    "from astronet import train\n",
     "\n",
-    "config_name = 'revised'\n",
+    "config_name = 'local_global_new'\n",
     "\n",
     "tune.FLAGS = tune.parser.parse_args([\n",
     "  '--client_secrets', '../client_secrets.json',\n",
@@ -45,14 +44,8 @@
     "  '--config_name', config_name,\n",
     "  '--train_files', '',\n",
     "])\n",
-    "train.FLAGS = train.parser.parse_args([\n",
-    "  '--model', 'AstroCnnModel',\n",
-    "  '--config_name', config_name,\n",
-    "  '--train_files', '',\n",
-    "])\n",
     "\n",
-    "\n",
-    "# client = tune.initialize_client()"
+    "client = tune.initialize_client()"
    ]
   },
   {
@@ -65,7 +58,8 @@
     "\n",
     "pd.set_option('max_colwidth', 100)\n",
     "\n",
-    "resp = client.projects().locations().studies().list(parent=tune.study_parent()).execute()\n",
+    "resp = client.projects().locations().studies().list(\n",
+    "    parent=tune.study_parent()).execute()\n",
     "studies = pd.DataFrame(resp['studies'])\n",
     "studies = studies.sort_values('createTime', ascending=False)\n",
     "studies.head(5)"
@@ -77,22 +71,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "study = studies['name'][0]\n",
+    "study = studies['name'][14]\n",
     "study_id = '{}/studies/{}'.format(tune.study_parent(), study.split('/')[-1])\n",
     "print(study_id)\n",
-    "resp = client.projects().locations().studies().trials().list(parent=study_id).execute()\n",
+    "resp = client.projects().locations().studies().trials().list(\n",
+    "    parent=study_id).execute()\n",
     "\n",
-    "metrics_loss = []\n",
+    "metrics_r = []\n",
+    "metrics_p = []\n",
     "params = []\n",
     "trial_ids = []\n",
     "for trial in resp['trials']:\n",
     "  if 'finalMeasurement' not in trial:\n",
     "    continue\n",
     "\n",
-    "  loss, = (m['value'] for m in trial['finalMeasurement']['metrics'] if m['metric'] == 'loss')  \n",
+    "  r, = (m['value'] for m in trial['finalMeasurement']['metrics'] if m['metric'] == 'r')  \n",
+    "  p, = (m['value'] for m in trial['finalMeasurement']['metrics'] if m['metric'] == 'p')\n",
     "  \n",
+    "  if r < 0.05:\n",
+    "    continue\n",
+    "    \n",
     "  params.append(trial['parameters'])\n",
-    "  metrics_loss.append(loss)\n",
+    "  metrics_r.append(r)\n",
+    "  metrics_p.append(p)\n",
     "  trial_ids.append(int(trial['name'].split('/')[-1]))\n",
     "  \n",
     "print(max(trial_ids), 'valid studies')"
@@ -104,33 +105,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
     "import matplotlib\n",
     "from matplotlib import pyplot as plt\n",
     "\n",
     "matplotlib.rcParams.update({'font.size': 16})\n",
     "\n",
     "fig, ax = plt.subplots()\n",
-    "ax.plot(np.minimum(metrics_loss, 0.5))\n",
-    "plt.xlabel(\"validation loss\")\n",
-    "sorted_metrics = sorted(metrics_loss, reverse=True)\n",
+    "ax.scatter(metrics_r, metrics_p)\n",
+    "plt.xlabel(\"recall\")\n",
+    "plt.ylabel(\"precision\")\n",
+    "sorted_metrics = sorted(zip(metrics_r, metrics_p))\n",
     "\n",
-    "best = 0\n",
     "for i, trial_id in enumerate(trial_ids):\n",
-    "  if (metrics_loss[i] <= sorted_metrics[-5]):\n",
-    "    print(i, metrics_loss[i])\n",
-    "  if (metrics_loss[i] <= metrics_loss[best]):\n",
-    "    best = i\n",
-    "    \n",
-    "print('Best trial:', trial_ids[best])"
+    "  if ((metrics_r[i], metrics_p[i]) >= sorted_metrics[-5]):\n",
+    "    ax.annotate(' {}'.format(i), (metrics_r[i], metrics_p[i]))\n",
+    "\n",
+    "plt.gcf().set_size_inches((16, 16))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best = 786\n",
+    "print(trial_ids[best])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pprint\n",
@@ -139,9 +145,8 @@
     "config = models.get_model_config('AstroCNNModel', config_name)\n",
     "\n",
     "for param in params[best]:\n",
-    "  tune.map_param(config['hparams'], param, config['inputs'])\n",
-    "\n",
-    "print(train.FLAGS.train_steps)\n",
+    "  tune.map_param(config['hparams'], param)\n",
+    "  \n",
     "pprint.pprint(config['hparams'])"
    ]
   },
@@ -159,7 +164,7 @@
     "\n",
     "config2 = models.get_model_config('AstroCNNModel', config_name)\n",
     "for param in params[best]:\n",
-    "  tune.map_param(config2['hparams'], param, config2.inputs)\n",
+    "  tune.map_param(config2['hparams'], param)\n",
     "  \n",
     "pp = pprint.PrettyPrinter()\n",
     "print('\\n'.join(difflib.unified_diff(\n",
@@ -173,7 +178,7 @@
    "metadata": {},
    "source": [
     "```\n",
-    "python astronet/tune.py --model=AstroCNNModel --config_name=revised --train_files=/mnt/tess/astronet/tfrecords-27-train/* --eval_files=/mnt/tess/astronet/tfrecords-27-val/* --train_steps=100 --tune_trials=10000 --client_secrets=../client_secrets.json --study_id=1_revised_1\n",
+    "python astronet/tune.py --model=AstroCNNModel --config_name=local_global_new --train_files=astronet/tfrecords-new/test-0000[0-5]* --eval_files=astronet/tfrecords-new/test-0000[6-6]* --train_steps=7000 --tune_trials=1000\n",
     "```"
    ]
   }
