Update tuning notebooks.

--- a/Tune-vetting.ipynb
+++ b/Tune-vetting.ipynb
@@ -52,7 +52,7 @@
     "])\n",
     "\n",
     "\n",
-    "client = tune_vetting.initialize_client()"
+    "# client = tune_vetting.initialize_client()"
    ]
   },
   {
@@ -176,7 +176,7 @@
    "metadata": {},
    "source": [
     "```\n",
-    "python astronet/tune_vetting.py --model=AstroCNNModelVetting --config_name=base --train_files=/mnt/tess/astronet/tfrecords-vetting-2-train/* --eval_files=/mnt/tess/astronet/tfrecords-vetting-2-val/* --pretrain_model_dir=/mnt/tess/astronet/checkpoints/extended_26_run_18/1 --train_steps=12000 --tune_trials=1000 --client_secrets=../client_secrets.json --study_id=vtest_1\n",
+    "python astronet/tune_vetting.py --model=AstroCNNModelVetting --config_name=revised --train_files=/mnt/tess/astronet/tfrecords-vetting-3-train/* --eval_files=/mnt/tess/astronet/tfrecords-vetting-3-val/* --pretrain_model_dir=/mnt/tess/astronet/checkpoints/extended_27_run_20 --train_steps=12000 --tune_trials=10000 --client_secrets=../client_secrets.json --study_id=1_vet_revised_1\n",
     "```"
    ]
   }
