Fix toi import.

--- a/Preprocess-vetting.ipynb
+++ b/Preprocess-vetting.ipynb
@@ -76,7 +76,7 @@
     "toi['Split'] = toi.apply(lambda r: 'train' if r['rand'] < 80 else 'test', axis=1)\n",
     "toi = toi.drop(columns=['Unnamed: 0', 'rand'])\n",
     "\n",
-    "joined_table = joined_table.append(toi)\n",
+    "# joined_table = joined_table.append(toi)\n",
     "\n",
     "\n",
     "print(f'Total entries: {len(joined_table)}')\n",
@@ -98,10 +98,10 @@
     "t_test = t_test.drop(columns=['Split'])\n",
     "all_table = all_table.drop(columns=['Split'])\n",
     "\n",
-    "t_train.to_csv('/mnt/tess/astronet/tces-vetting-v2-train.csv')\n",
-    "t_val.to_csv('/mnt/tess/astronet/tces-vetting-v2-val.csv')\n",
-    "t_test.to_csv('/mnt/tess/astronet/tces-vetting-v2-test.csv')\n",
-    "all_table.to_csv('/mnt/tess/astronet/tces-vetting-all.csv')"
+    "# t_train.to_csv('/mnt/tess/astronet/tces-vetting-v3-train.csv')\n",
+    "# t_val.to_csv('/mnt/tess/astronet/tces-vetting-v3-val.csv')\n",
+    "# t_test.to_csv('/mnt/tess/astronet/tces-vetting-v3-test.csv')\n",
+    "# all_table.to_csv('/mnt/tess/astronet/tces-vetting-all.csv')"
    ]
   },
   {
@@ -131,24 +131,25 @@
     "\n",
     "def clean_tois():\n",
     "    toi = pd.read_csv('/mnt/tess/labels/toi_pc_instar.csv', header=0, low_memory=False)\n",
+    "    toi.describe()\n",
     "    \n",
     "    toi = toi[toi['instar'] == False]\n",
-    "    toi = toi[toi['Master Disposition'].isin(['P', 'VPC', 'KP'])]\n",
+    "    toi = toi[toi['Master Disposition'].isin(['P', 'VPC', 'KP', 'PC', 'CPC'])]\n",
     "    toi = toi[toi['planet_period'] < 99999]\n",
     "\n",
     "    toi['tic_id'] = toi['star_tic']\n",
     "    toi['RA'] = toi['star_ra']\n",
     "    toi['Dec'] = toi['star_dec']\n",
     "    toi['Tmag'] = toi['star_tmag']\n",
-    "    toi['Epoc'] = toi['planet_epoch']\n",
+    "    toi['Epoc'] = toi['planet_epoch'] - 2457000\n",
     "    toi['Period'] = toi['planet_period']\n",
     "    toi['Duration'] = toi['planet_tdur']\n",
     "    toi['Transit_Depth'] = toi['planet_depth']\n",
     "    toi['Sectors'] = -1.0\n",
     "    toi['teff'] = toi['star_teff']\n",
     "    toi['logg'] = toi['star_logg']\n",
-    "    toi['SN'] = toi['star_rad']\n",
-    "    toi['Qingress'] = toi['star_rad']\n",
+    "    toi['SN'] = None\n",
+    "    toi['Qingress'] = None\n",
     "    toi['disp_p'] = 1\n",
     "    toi['disp_e'] = 0\n",
     "    toi['disp_n'] = 0\n",
@@ -182,7 +183,7 @@
     "    \n",
     "    toi['rand'] = toi.apply(lambda r: np.random.randint(0, 100), axis=1)\n",
     "    \n",
-    "    toi.to_csv('/mnt/tess/labels/tce_toi_vetting_processed.csv')"
+    "    toi.to_csv('/mnt/tess/labels/tce_toi_vetting_processed.csv')\n"
    ]
   }
  ],
