--- a/Train.ipynb
+++ b/Train.ipynb
@@ -12,17 +12,17 @@
     "from astronet import train\n",
     "\n",
     "model_name = 'AstroCNNModel'\n",
-    "config_name = 'revised'\n",
+    "config_name = 'revised_tuned'\n",
     "\n",
     "def run_training(ensemble_no=1):\n",
     "    train.FLAGS = train.parser.parse_args([\n",
     "      '--model', model_name,\n",
     "      '--config_name', config_name,\n",
-    "      '--train_files', '/mnt/tess/astronet/tfrecords-27-train/00000-of-00050',\n",
-    "      '--eval_files', '/mnt/tess/astronet/tfrecords-27-train/00000-of-00050',\n",
+    "      '--train_files', '/mnt/tess/astronet/tfrecords-27-train/*',\n",
+    "      '--eval_files', '/mnt/tess/astronet/tfrecords-27-val/*',\n",
     "      '--model_dir', '',\n",
     "      '--train_epochs', '5',\n",
-    "      '--train_steps', '100'\n",
+    "      '--train_steps', '0'\n",
     "    ])\n",
     "\n",
     "    config = models.get_model_config(model_name, config_name)\n",
