Fix more labels.

--- a/Preprocess.ipynb
+++ b/Preprocess.ipynb
@@ -55,7 +55,7 @@
     "\n",
     "labels_table = pd.read_csv(labels_file, header=0, low_memory=False)\n",
     "disps = ['E', 'J', 'N', 'S', 'B']\n",
-    "users = ['av', 'md', 'ch', 'as', 'mk', 'et']\n",
+    "users = ['av', 'md', 'ch', 'as', 'mk', 'et', '']\n",
     "\n",
     "for d in disps:\n",
     "    labels_table[f'disp_{d}'] = 0\n",
@@ -102,10 +102,10 @@
     "print(f'Split sizes. Train: {len(t_train)}; Valid: {len(t_val)}; Test: {len(t_test)}')\n",
     "\n",
     "\n",
-    "t_train.to_csv('/mnt/tess/astronet/tces-v8-train.csv')\n",
-    "t_val.to_csv('/mnt/tess/astronet/tces-v8-val.csv')\n",
-    "t_test.to_csv('/mnt/tess/astronet/tces-v8-test.csv')\n",
-    "all_table.to_csv('/mnt/tess/astronet/tces-tmp-all.csv')"
+    "# t_train.to_csv('/mnt/tess/astronet/tces-v8-train.csv')\n",
+    "# t_val.to_csv('/mnt/tess/astronet/tces-v8-val.csv')\n",
+    "# t_test.to_csv('/mnt/tess/astronet/tces-v8-test.csv')\n",
+    "# all_table.to_csv('/mnt/tess/astronet/tces-tmp-all.csv')"
    ]
   },
   {
