Fix ephemeride and duplicate data info.

--- a/Data.ipynb
+++ b/Data.ipynb
@@ -9,8 +9,8 @@
     "import os\n",
     "import tensorflow as tf\n",
     "\n",
-    "tces_file = '/mnt/tess/astronet/tces-vetting-v2-train.csv'\n",
-    "file_pattern = '/mnt/tess/astronet/tfrecords-26-train/*'\n",
+    "tces_file = '/mnt/tess/astronet/tces-v8-train.csv'\n",
+    "file_pattern = '/mnt/tess/astronet/tfrecords-vetting-3-train/*'\n",
     "filenames = tf.io.gfile.glob(file_pattern)\n",
     "    \n",
     "filenames"
@@ -33,7 +33,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -84,7 +84,8 @@
    "source": [
     "from matplotlib import pyplot as plt\n",
     "\n",
-    "labels = ['p', 'e', 'n']\n",
+    "# labels = ['p', 'e', 'n']\n",
+    "labels = ['E', 'N', 'J', 'S', 'B']\n",
     "counts = [sum(examples_table['disp_{}'.format(l)] > 0) for l in labels]\n",
     "ax = plt.bar(labels, counts)\n",
     "for i in range(len(labels)):\n",
@@ -92,8 +93,8 @@
     "    height = b.get_height()\n",
     "    x, y = b.get_xy()\n",
     "    plt.annotate(\n",
-    "        '{:.0%}'.format(counts[i] / sum(counts)),\n",
-    "        (x + 0.1, y + height + 100))"
+    "        '{} - {:.0%}'.format(counts[i], counts[i] / sum(counts)),\n",
+    "        (x + 0.1, y + height + 11))"
    ]
   },
   {
@@ -172,7 +173,7 @@
     "from astronet import models\n",
     "from astronet.astro_cnn_model import input_ds\n",
     "\n",
-    "config = models.get_model_config('AstroCNNModel', 'extended')\n",
+    "config = models.get_model_config('AstroCNNModel', 'revised_tuned')\n",
     "\n",
     "ds = input_ds.build_dataset(\n",
     "      file_pattern=file_pattern,\n",
@@ -206,7 +207,8 @@
     "if len(all_tics) == len(set(all_tics)):\n",
     "  print('No duplicates found.')\n",
     "else:\n",
-    "  print('Found duplicates!', len(all_tics) - len(set(all_tics)))"
+    "  print('Found duplicates!', len(all_tics) - len(set(all_tics)))\n",
+    "  print([t for t in set(all_tics) if all_tics.count(t) > 1])"
    ]
   },
   {
