--- a/Preprocess.ipynb
+++ b/Preprocess.ipynb
@@ -71,6 +71,7 @@
     "                        \n",
     "    return row\n",
     "\n",
+    "labels_table = labels_table[labels_table['Needs review'] != '!']\n",
     "labels_table['tic_id'] = labels_table['TIC ID']\n",
     "labels_table = labels_table.apply(set_labels, axis=1)\n",
     "\n",
@@ -101,11 +102,10 @@
     "t_test = t_test.drop(columns=['Hemisphere', 'Seed randbetween(1, 100)', 'Split'])\n",
     "print(f'Split sizes. Train: {len(t_train)}; Valid: {len(t_val)}; Test: {len(t_test)}')\n",
     "\n",
-    "\n",
-    "# t_train.to_csv('/mnt/tess/astronet/tces-v8-train.csv')\n",
-    "# t_val.to_csv('/mnt/tess/astronet/tces-v8-val.csv')\n",
-    "# t_test.to_csv('/mnt/tess/astronet/tces-v8-test.csv')\n",
-    "# all_table.to_csv('/mnt/tess/astronet/tces-tmp-all.csv')"
+    "t_train.to_csv('/mnt/tess/astronet/tces-v8-train.csv')\n",
+    "t_val.to_csv('/mnt/tess/astronet/tces-v8-val.csv')\n",
+    "t_test.to_csv('/mnt/tess/astronet/tces-v8-test.csv')\n",
+    "all_table.to_csv('/mnt/tess/astronet/tces-tmp-all.csv')"
    ]
   },
   {
@@ -208,17 +208,21 @@
     "\n",
     "def add_y3_data():\n",
     "    tcenew = pd.read_csv('/mnt/tess/labels/Y3_cand_instar.csv', header=0, low_memory=False)\n",
+    "    actual_eph = pd.read_csv('/mnt/tess/labels/updated_ephemerides_triage.csv', header=0, low_memory=False)\n",
     "    tceold = pd.read_csv('/mnt/tess/labels/tce_bls_instar+old.csv', header=0, low_memory=False)\n",
     "    \n",
     "    tceold = tceold.drop(columns=['Unnamed: 0', 'a', 'ccd', 'camera', 'row_id_max', 'Disposition', 'toi_id'])\n",
     "    \n",
+    "    actual_eph['tic_id'] = actual_eph['tic']\n",
+    "    \n",
+    "    tcenew['tic_id'] = tcenew['star_tic']\n",
     "    tcenew['tic_id'] = tcenew['star_tic']\n",
     "    tcenew['RA'] = tcenew['star_ra']\n",
     "    tcenew['Dec'] = tcenew['star_dec']\n",
     "    tcenew['Tmag'] = tcenew['star_tmag']\n",
-    "    tcenew['Epoc'] = tcenew['planet_epoch']\n",
-    "    tcenew['Period'] = tcenew['planet_period']\n",
-    "    tcenew['Duration'] = tcenew['planet_tdur']\n",
+    "#     tcenew['Epoc'] = tcenew['planet_epoch']\n",
+    "#     tcenew['Period'] = tcenew['planet_period']\n",
+    "#     tcenew['Duration'] = tcenew['planet_tdur']\n",
     "    tcenew['Transit_Depth'] = tcenew['planet_depth']\n",
     "    tcenew['Sectors'] = tcenew.apply(lambda row: len(row['sector_id'].split(' ')), axis=1)\n",
     "    tcenew['Sectors_max'] = tcenew.apply(lambda row: max(row['sector_id'].split(' ')), axis=1)\n",
@@ -228,8 +232,16 @@
     "    tcenew['Qingress'] = tcenew['star_rad']\n",
     "    tcenew['Ilabel'] = tcenew['instar']\n",
     "    \n",
+    "    tcenew = tcenew.join(actual_eph, how='inner', on='tic_id', rsuffix='_eph')\n",
+    "    tcenew['Epoc'] = tcenew['epo']\n",
+    "    tcenew['Period'] = tcenew['per']\n",
+    "    tcenew['Duration'] = tcenew['dur']\n",
+    "    \n",
+    "    tcenew = tcenew[tceold.columns]\n",
+    "    tcenew = tcenew.drop_duplicates(subset='tic_id')\n",
+    "    \n",
     "    alltce = tceold\n",
-    "    alltce = alltce.append(tcenew[tceold.columns])\n",
+    "    alltce = alltce.append(tcenew)\n",
     "    \n",
     "    alltce.to_csv('/mnt/tess/labels/tce_bls_to_y3.csv')"
    ]
