--- a/Train-vetting.ipynb
+++ b/Train-vetting.ipynb
@@ -15,13 +15,13 @@
     "def run_training(ensemble_no=1):\n",
     "    train.FLAGS = train.parser.parse_args([\n",
     "      '--model', 'AstroCNNModelVetting',\n",
-    "      '--config_name', 'base',\n",
-    "      '--train_files', '/mnt/tess/astronet/tfrecords-vetting-2-train/*',\n",
-    "      '--eval_files', '/mnt/tess/astronet/tfrecords-vetting-2-val/*',\n",
-    "      '--pretrain_model_dir', '/mnt/tess/astronet/checkpoints/extended_26_run_18/1',\n",
+    "      '--config_name', 'vrevised',\n",
+    "      '--train_files', '/mnt/tess/astronet/tfrecords-vetting-3-train/*',\n",
+    "      '--eval_files', '/mnt/tess/astronet/tfrecords-vetting-3-val/*',\n",
+    "      '--pretrain_model_dir', '/mnt/tess/astronet/checkpoints/revised_tuned_27_run_1/1',\n",
     "      '--model_dir', '',\n",
     "      '--train_epochs', '5',\n",
-    "      '--train_steps', '100'\n",
+    "      '--train_steps', '0'\n",
     "    ])\n",
     "    \n",
     "    train.main(None)\n",
